infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solana-study
  labels:
    name: solana-study
